--- a/public/css/3rdparty/numberCounter.css
+++ b/public/css/3rdparty/numberCounter.css
@@ -26,7 +26,7 @@
 /* Column Grids End */
 
 /*.wrapper { width: 980px; margin: 30px auto; position: relative;}*/
-.counter { background-color: #ffffff; padding: 20px 0; border-radius: 5px;}
+.counter { background-color: #ffffff; border-radius: 5px;}
 .count-title { font-size: 40px; font-weight: normal;  margin-top: 10px; margin-bottom: 0; text-align: center; }
 .count-text { font-size: 13px; font-weight: normal;  margin-top: 10px; margin-bottom: 0; text-align: center; }
 .fa-2x { margin: 0 auto; float: none; display: table; color: #4ad1e5; }
