add stat button and some incomplete code! resolve minor bugs. add cropping of characters code.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -20,6 +20,9 @@ input {
   position: relative;
   top: 130px; }
 
+#stat-modal td, #stat-modal th {
+  text-align: center; }
+
 .plate-t1 .plate-t1-background {
   background-image: url("../assets/images/samplePlate.png");
   position: relative;
